--- a/views/rawproducts/addrawproduct.html
+++ b/views/rawproducts/addrawproduct.html
@@ -28,10 +28,6 @@
                 </select>
             </label>
             <br><br>
-            <label> Amount:
-                <input type="text" name="amount">
-            </label>
-            <br><br>
             <label> Kind:
                 <select name="kind">
                     <option value="fresh">Fresh</option>
@@ -44,7 +40,9 @@
                 </select>
             </label>
             <br><br>
-            <textarea name="description" cols="40" placeholder="Description"></textarea>
+            <label> Cost:
+                <input type="text" name="cost" value=""> per unit
+            </label>
             <br><br>
             <input type="submit" value="Add">
         </form>
