--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -5,8 +5,6 @@ html(lang="en")
   body
     center
         h1 Cafeteria miComidita Control System
-        form(action="/addrawproduct", method="get")
-            input(type="submit", value="Add Raw Product")
         br
         form(action="/editrawproduct", method="get")
-            input(type="submit", value="See/Edit Raw Products")
+            input(type="submit", value="Raw Products")
