--- a/views/batchrawproduct/batchrawproduct.pug
+++ b/views/batchrawproduct/batchrawproduct.pug
@@ -3,6 +3,8 @@
 doctype html
 html(lang="en")
     head
+        link(href='/css/styleaddproducts.css', rel='stylesheet')
+        link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine")
         meta(http-equiv="cache-control", content="max-age=0")
         meta(http-equiv="cache-control", content="no-cache")
         meta(http-equiv="expires", content="0")
