--- a/views/rawproducts/addrawproduct.html
+++ b/views/rawproducts/addrawproduct.html
@@ -1,12 +1,16 @@
 <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <link href="css/styleaddproducts.css" rel="stylesheet" type="text/css">
+  <!--  <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
     <!-- Custom Fonts -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-</head>
+
+  </head>
 <body>
     <center>
         <div class="col-lg-12 text-center">
