--- a/views/rawproducts/addrawproductdone.pug
+++ b/views/rawproducts/addrawproductdone.pug
@@ -2,6 +2,8 @@ doctype html
 html(lang="en")
     head
         title Success
+        link(href='/css/styleaddproducts.css', rel='stylesheet')
+        link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine")
     body
         h1 Raw Product Added Successfully
         h3 Details:
