--- a/views/batchrawproduct/batchrawproducts.pug
+++ b/views/batchrawproduct/batchrawproducts.pug
@@ -1,7 +1,8 @@
 doctype html
 html(lang="en")
     head
-
+        link(href='/css/styleshowproducts.css', rel='stylesheet')
+        link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine")
         meta(http-equiv="cache-control", content="max-age=0")
         meta(http-equiv="cache-control", content="no-cache")
         meta(http-equiv="expires", content="0")
@@ -41,6 +42,8 @@ html(lang="en")
                     - var formatdate =  "Expires on: " + val.expD + "/" + val.expM + "/" + val.expY
                     li=formatamount
                     li=formatdate
+                    br
+                    br
         center
             form(method="post")
                 input(type="hidden",name="action",value="add")
