--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -2,6 +2,8 @@ doctype html
 html(lang="en")
   head
     title miComidita
+    link(href='/css/stylehome.css', rel='stylesheet')
+    link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine")
   body
     center
         h1 Cafeteria miComidita Control System
