--- a/views/rawproducts/editrawproduct.pug
+++ b/views/rawproducts/editrawproduct.pug
@@ -1,7 +1,8 @@
 doctype html
 html(lang="en")
     head
-
+        link(href='/css/styleshowproducts.css', rel='stylesheet')
+        link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine")
         meta(http-equiv="cache-control", content="max-age=0")
         meta(http-equiv="cache-control", content="no-cache")
         meta(http-equiv="expires", content="0")
@@ -14,23 +15,23 @@ html(lang="en")
         ol
             each val, index in products
                 li=val.name
-                    form(action="", method="post")
-                        input(type="hidden",name="action",value="delete")
-                        input(type="hidden",name="id",value=val._id)
-                        input(type="submit",value="Delete")
-                    form(action="", method="post")
-                        input(type="hidden",name="action",value="edit")
-                        input(type="hidden",name="id",value=val._id)
-                        input(type="submit",value="Edit")
-                    form(action="/batchrawproduct", method="post")
-                        input(type="hidden",name="pname", value=val.name)
-                        input(type="hidden",name="action",value="show")
-                        input(type="hidden",name="id",value=val._id)
-                        input(type="hidden",name="unit",value=val.unit)
-                        input(type="submit",value="Batches")
                 ul
                     each sval, sind in val
                         li= sind + ': ' + sval
+                form(action="", method="post")
+                  input(type="hidden",name="action",value="delete")
+                  input(type="hidden",name="id",value=val._id)
+                  input(type="submit",value="Delete")
+                form(action="", method="post")
+                  input(type="hidden",name="action",value="edit")
+                  input(type="hidden",name="id",value=val._id)
+                  input(type="submit",value="Edit")
+                form(action="/batchrawproduct", method="post")
+                  input(type="hidden",name="pname", value=val.name)
+                  input(type="hidden",name="action",value="show")
+                  input(type="hidden",name="id",value=val._id)
+                  input(type="hidden",name="unit",value=val.unit)
+                  input(type="submit",value="Batches")
         center
             form(action="/", method="get")
                 input(type="submit", value="Back")
