--- a/views/rawproducts/productdetails.pug
+++ b/views/rawproducts/productdetails.pug
@@ -1,6 +1,8 @@
 doctype html
 html(lang="en")
     head
+        link(href='/css/styleaddproducts.css', rel='stylesheet')
+        link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine")
         title Product Details
     body
         center
