--- a/views/rawproducts/editrawproduct.pug
+++ b/views/rawproducts/editrawproduct.pug
@@ -14,21 +14,21 @@ html(lang="en")
             h1 Showing Raw Products
         ol
             each val, index in products
-                li=val.name
-                form(action="", method="post")
-                  input(type="hidden",name="action",value="delete")
-                  input(type="hidden",name="id",value=val._id)
-                  input(type="submit",value="Delete")
-                form(action="", method="post")
-                  input(type="hidden",name="action",value="edit")
-                  input(type="hidden",name="id",value=val._id)
-                  input(type="submit",value="Edit")
-                form(action="/batchrawproduct", method="post")
-                  input(type="hidden",name="pname", value=val.name)
-                  input(type="hidden",name="action",value="show")
-                  input(type="hidden",name="id",value=val._id)
-                  input(type="hidden",name="unit",value=val.unit)
-                  input(type="submit",value="Batches")
+                    form(action="", method="post",class="lineaBotones")
+                      input(type="hidden",name="action",value="delete")
+                      input(type="hidden",name="id",value=val._id)
+                      input(type="submit",value="Delete")
+                    form(action="", method="post", class="lineaBotones")
+                      input(type="hidden",name="action",value="edit")
+                      input(type="hidden",name="id",value=val._id)
+                      input(type="submit",value="Edit")
+                    form(action="/batchrawproduct", method="post")
+                      input(type="hidden",name="pname", value=val.name)
+                      input(type="hidden",name="action",value="show")
+                      input(type="hidden",name="id",value=val._id)
+                      input(type="hidden",name="unit",value=val.unit)
+                      input(type="submit",value="Batches")
+            li=val.name
                 ul
                     each sval, sind in val
                         li= sind + ': ' + sval
