--- a/views/batchrawproduct/batchrawproducts.pug
+++ b/views/batchrawproduct/batchrawproducts.pug
@@ -19,14 +19,15 @@ html(lang="en")
                 - i++
                 - var formattedcount = "Batch number: " + i
                 li=formattedcount
-                    form(method="post")
+                    br
+                    form(method="post", class = "lineaBotones")
                         input(type="hidden",name="action",value="delete")
                         input(type="hidden",name="id",value=val._id)
                         input(type="hidden", name="productid", value=productid)
                         input(type="hidden", name="unit", value=unit)
                         input(type="hidden", name="productname", value=titlename)
                         input(type="submit",value="Delete")
-                    form(method="post")
+                    form(method="post", class = "lineaBotones")
                         input(type="hidden",name="action",value="edit")
                         input(type="hidden",name="id",value=val._id)
                         input(type="hidden", name="productid", value=productid)
@@ -37,6 +38,7 @@ html(lang="en")
                         input(type="hidden", name="unit", value=unit)
                         input(type="hidden", name="productname", value=titlename)
                         input(type="submit",value="Edit")
+                br
                 ul
                     - var formatamount = "Batch amount: " + val.amount + " " + unit + "(s)"
                     - var formatdate =  "Expires on: " + val.expD + "/" + val.expM + "/" + val.expY
